# ntfs-3g-system-compression

./: .gitignore  Makefile.am  README.md  configure.ac
src/: common_defs.h  decompress_common.c  decompress_common.h  lzx_common.c  lzx_decompress.c  plugin.c  system_compression.c  system_compression.h  xpress_decompress.c
